--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <!-- Prevent indexing by search engines -->
   <meta name="robots" content="noindex,nofollow" />
   <title>Caravan Gift Card Converter</title>
+  <!-- Caravan font (Proto Mono fallback) -->
+  <link href="https://fonts.cdnfonts.com/css/proto-mono" rel="stylesheet">
   <style>
     :root { --gap: 16px; --c-bg: #d1d1d1; --c-accent: #fee906; --c-text: #111; }
-    html, body { height: 100%; margin: 0; font-family: 'Futura PT', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
+    html, body { height: 100%; margin: 0; font-family: 'Proto Mono', 'Futura PT', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
     body { display: grid; place-items: center; background: var(--c-bg); color: var(--c-text); }
     .card { width: min(920px, 94vw); padding: 24px; border-radius: 20px; background: #fff; box-shadow: 0 6px 30px rgba(0,0,0,.25); }
     .header { font-size: 1.6rem; font-weight: bold; margin-bottom: 16px; color: var(--c-text); }
@@ -20,14 +22,13 @@
     .row > * { flex: 1 1 auto; }
     input[type="text"] { flex: 1; padding: 14px 16px; border-radius: 12px; border: 2px solid var(--c-accent); background: #fff; color: var(--c-text); font-size: 18px; }
     input[type="text"]::placeholder { color: #777; }
-    button { padding: 14px 18px; border-radius: 12px; border: none; background: var(--c-accent); color: #000; font-size: 16px; font-weight: bold; cursor: pointer; transition: background .2s; }
+    button { padding: 14px 18px; border-radius: 12px; border: none; background: var(--c-accent); color: #000; font-size: 16px; font-weight: bold; cursor: pointer; transition: background .2s; font-family: inherit; }
     button:hover { background: #f0d800; }
     button.secondary { background: #eee; color: #111; border: 1px solid #bbb; }
     .qr-wrap { margin-top: 20px; display: grid; place-items: center; padding: 16px; background:#fafafa; border: 2px dashed var(--c-accent); border-radius: 16px; }
     #qrcode canvas, #qrcode img { width: min(78vw, 560px) !important; height: auto !important; image-rendering: pixelated; }
     .hint { font-size: 13px; color: #555; margin-top: 8px; }
     .error { color: #c00; margin-top: 8px; font-size: 14px; }
-    .expired { text-align: center; font-size: 1.2rem; color: #c00; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -63,12 +64,18 @@
       return (raw || '').replace(/[^A-Za-z0-9 _.-]/g, '').trim();
     }
 
+    function resetPage(){
+      input.value = '';
+      qrel.innerHTML = '';
+      err.hidden = true;
+    }
+
     function renderQR(text){
       qrel.innerHTML = '';
       qr = new QRCode(qrel, { text, width: 560, height: 560, correctLevel: QRCode.CorrectLevel.M });
       if(timeoutId){ clearTimeout(timeoutId); }
       timeoutId = setTimeout(()=>{
-        mainCard.innerHTML = '<div class="expired">QR Code expired</div>';
+        resetPage();
       }, 50000); // 50 seconds
     }
 
@@ -82,7 +89,7 @@
     }
 
     btn.addEventListener('click', handleGenerate);
-    btnClear.addEventListener('click', () => { input.value = ''; qrel.innerHTML=''; err.hidden=true; if(timeoutId){ clearTimeout(timeoutId); }});
+    btnClear.addEventListener('click', () => { resetPage(); if(timeoutId){ clearTimeout(timeoutId); }});
     input.addEventListener('keydown', (e)=>{ if(e.key === 'Enter'){ handleGenerate(); }});
 
     const params = new URLSearchParams(location.search);
