--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
   <!-- Prevent indexing by search engines -->
   <meta name="robots" content="noindex,nofollow" />
   <title>Caravan Gift Card Converter</title>
-  <!-- Caravan font (Proto Mono fallback) -->
-  <link href="https://fonts.cdnfonts.com/css/proto-mono" rel="stylesheet">
   <style>
     :root { --gap: 16px; --c-bg: #d1d1d1; --c-accent: #fee906; --c-text: #111; }
-    html, body { height: 100%; margin: 0; font-family: 'Proto Mono', 'Futura PT', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
+    html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
     body { display: grid; place-items: center; background: var(--c-bg); color: var(--c-text); }
     .card { width: min(920px, 94vw); padding: 24px; border-radius: 20px; background: #fff; box-shadow: 0 6px 30px rgba(0,0,0,.25); }
-    .header { font-size: 1.6rem; font-weight: bold; margin-bottom: 16px; color: var(--c-text); }
+    .header { font-size: 1.6rem; font-weight: bold; margin-bottom: 12px; color: var(--c-text); }
+    .description { font-size: 0.95rem; color: #333; margin-bottom: 16px; line-height: 1.4; }
     .row { display: flex; gap: var(--gap); flex-wrap: wrap; align-items: center; }
     .row > * { flex: 1 1 auto; }
     input[type="text"] { flex: 1; padding: 14px 16px; border-radius: 12px; border: 2px solid var(--c-accent); background: #fff; color: var(--c-text); font-size: 18px; }
     input[type="text"]::placeholder { color: #777; }
-    button { padding: 14px 18px; border-radius: 12px; border: none; background: var(--c-accent); color: #000; font-size: 16px; font-weight: bold; cursor: pointer; transition: background .2s; font-family: inherit; }
+    button { padding: 14px 18px; border-radius: 12px; border: none; background: var(--c-accent); color: #000; font-size: 16px; font-weight: bold; cursor: pointer; transition: background .2s; }
     button:hover { background: #f0d800; }
     button.secondary { background: #eee; color: #111; border: 1px solid #bbb; }
     .qr-wrap { margin-top: 20px; display: grid; place-items: center; padding: 16px; background:#fafafa; border: 2px dashed var(--c-accent); border-radius: 16px; }
@@ -34,6 +33,11 @@
 <body>
   <div class="card" id="mainCard">
     <div class="header">Caravan Gift Card Converter</div>
+    <div class="description">
+      Enter the <strong>alphanumerical code</strong> displayed on the GiftPro voucher, then scan the QR with the Toast device.<br>
+      The code will <strong>disappear after 30 seconds</strong>, so have the Toast device ready to scan.<br>
+      A physical code will look like <code>A1B234C5DEFG</code> or similar.
+    </div>
     <div class="row" style="margin-bottom:12px">
       <input id="code" type="text" placeholder="Type your alphanumeric code (e.g., ABC123)" autofocus autocapitalize="none" autocorrect="off" spellcheck="false" inputmode="text" enterkeyhint="done" />
       <button id="gen">Generate QR</button>
