--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no" />
   <!-- Prevent indexing by search engines -->
   <meta name="robots" content="noindex,nofollow" />
-  <title>Caravan Gift Card Toolle>
+  <title>Caravan Gift Card Tool</title>
   <style>
     :root { --gap: 16px; --c-bg: #d1d1d1; --c-accent: #fee906; --c-text: #111; }
     html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
@@ -23,7 +23,6 @@
     input[type="text"]::placeholder { color: #777; }
     button { padding: 14px 18px; border-radius: 12px; border: none; background: var(--c-accent); color: #000; font-size: 16px; font-weight: bold; cursor: pointer; transition: background .2s; }
     button:hover { background: #f0d800; }
-    button.secondary { background: #eee; color: #111; border: 1px solid #bbb; }
     .qr-wrap { margin-top: 20px; display: grid; place-items: center; padding: 16px; background:#fafafa; border: 2px dashed var(--c-accent); border-radius: 16px; }
     #qrcode canvas, #qrcode img { width: min(78vw, 560px) !important; height: auto !important; image-rendering: pixelated; }
     .hint { font-size: 13px; color: #555; margin-top: 8px; }
@@ -32,17 +31,17 @@
 </head>
 <body>
   <div class="card" id="mainCard">
-    <div class="header">Caravan Gift Card Converter</div>
+    <div class="header">Caravan Gift Card Tool</div>
     <div class="description">
       Enter the <strong>alphanumerical code</strong> displayed on the GiftPro voucher, then scan the QR with the Toast device.<br>
       The code will <strong>disappear after 30 seconds</strong>, so have the Toast device ready to scan.<br>
       A physical code will look like <code>A1B234C5DEFG</code> or similar.
     </div>
     <div class="row" style="margin-bottom:12px">
-      <input id="code" type="text" placeholder="Type your alphanumeric code (e.g., ABC123)" autofocus autocapitalize="none" autocorrect="off" spellcheck="false" inputmode="text" enterkeyhint="done" />
+      <input id="code" type="text" placeholder="Enter code (letters & numbers only)" autofocus autocapitalize="none" autocorrect="off" spellcheck="false" inputmode="text" enterkeyhint="done" />
       <button id="gen">Generate QR</button>
     </div>
-    <div class="hint">Only letters, numbers, spaces, - _ . are kept. Everything else is removed.</div>
+    <div class="hint">Only letters and numbers are accepted. No spaces or special characters.</div>
     <div id="err" class="error" hidden></div>
     <div id="qrContainer" class="qr-wrap">
       <div id="qrcode" aria-live="polite"></div>
@@ -56,15 +55,9 @@
   <script>
     const input = document.getElementById('code');
     const btn = document.getElementById('gen');
-        const err = document.getElementById('err');
+    const err = document.getElementById('err');
     const qrel = document.getElementById('qrcode');
-    const mainCard = document.getElementById('mainCard');
-    let qr;
     let timeoutId;
-
-    function sanitise(raw){
-      return (raw || '').replace(/[^A-Za-z0-9 _.-]/g, '').trim();
-    }
 
     function resetPage(){
       input.value = '';
@@ -74,28 +67,36 @@
 
     function renderQR(text){
       qrel.innerHTML = '';
-      qr = new QRCode(qrel, { text, width: 560, height: 560, correctLevel: QRCode.CorrectLevel.M });
+      new QRCode(qrel, { text, width: 560, height: 560, correctLevel: QRCode.CorrectLevel.M });
       if(timeoutId){ clearTimeout(timeoutId); }
-      timeoutId = setTimeout(()=>{
-        resetPage();
-      }, 30000); // 30 seconds
+      timeoutId = setTimeout(()=>{ resetPage(); }, 30000); // 30 seconds
     }
 
     function handleGenerate(){
-      const clean = sanitise(input.value);
-      input.value = clean;
-      if(!clean){
-        err.hidden = false; err.textContent = 'Please enter an alphanumeric code.'; return;
+      const raw = input.value.trim();
+      if(!raw){
+        err.hidden = false; err.textContent = 'Please enter a code.';
+        return;
       }
-      err.hidden = true; renderQR(clean);
+      if(!/^[A-Za-z0-9]+$/.test(raw)){
+        err.hidden = false; err.textContent = 'Only letters and numbers are allowed. No spaces or special characters.';
+        return;
+      }
+      err.hidden = true;
+      renderQR(raw);
     }
 
-    btn.addEventListener('click', handleGenerate); if(timeoutId){ clearTimeout(timeoutId); }});
+    btn.addEventListener('click', handleGenerate);
     input.addEventListener('keydown', (e)=>{ if(e.key === 'Enter'){ handleGenerate(); }});
 
     const params = new URLSearchParams(location.search);
     const fromQuery = params.get('code');
-    if(fromQuery){ input.value = sanitise(fromQuery); handleGenerate(); }
+    if(fromQuery){
+      if(/^[A-Za-z0-9]+$/.test(fromQuery)){
+        input.value = fromQuery;
+        handleGenerate();
+      }
+    }
   </script>
 </body>
 </html>
