--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="card" id="mainCard">
-    <div class="header">Caravan Gift Card Tool</div>
+    <div class="header"> Gift Card Tool</div>
     <div class="description">
       Enter the <strong>alphanumerical code</strong> displayed on the GiftPro voucher, then scan the QR with the Toast device.<br>
       The code will <strong>disappear after 30 seconds</strong>, so have the Toast device ready to scan.
@@ -45,7 +45,6 @@
     <div id="qrContainer" class="qr-wrap">
       <div id="qrcode" aria-live="polite"></div>
     </div>
-   CARAVAN
   </div>
 
   <!-- qrcode.js (MIT) from CDN -->
