--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no" />
   <!-- Prevent indexing by search engines -->
   <meta name="robots" content="noindex,nofollow" />
-  <title>Caravan Gift Card Tool</title>
+  <title> Gift Card Tool</title>
   <style>
     :root { --gap: 16px; --c-bg: #d1d1d1; --c-accent: #fee906; --c-text: #111; }
     html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
